# hello-bonsol

./: Anchor.toml  welcome-a6c375eb8ad1dea5ced1eb999c3c3f465b739b6683b2ca48df4c9a9834ff93f7  welcomer-496c97f12c17f3f3b32b17beb13917c63b55e36dfcd760db6df415f6345c464d
programs/hello-bonsol/: Cargo.toml
programs/hello-bonsol/src/: lib.rs
tests/: hello-bonsol.ts
zkprograms/welcomer/: Cargo.toml  README.md  manifest.json
zkprograms/welcomer/src/: main.rs
