[package]
name = "hello-bonsol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_bonsol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "bonsol-anchor-interface/idl-build"]


[dependencies]
anchor-lang = { version="=0.30.1",git ="https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"], rev="a2937a9326f834859ff5bbe942f073ba1b0bcdc5"}
bonsol-anchor-interface = { git="https://github.com/bonsol-collective/bonsol-anchor-interface.git"}
anchor-spl = { git ="https://github.com/coral-xyz/anchor.git", rev="a2937a9326f834859ff5bbe942f073ba1b0bcdc5"}
